--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,49 +15,90 @@
 </head>
 
   <body>
-
+<nav class="navigation">
   Services
   Product
   Vision
   Features
   About
   Contact
+  
+</nav>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
-  Get Started
+<header>
+<h1>
+  <p id="Innovation">Innovation</p>
+  <p id="indent">On</p>
+  <p id="demand">Demand</p>
+</h1>
+  
+<p id="GetStarted">Get Started</p>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+  <img class="image1" src="img/header-img.png" alt="Image of a code snippet.">
+</header>
 
-  Features
+<section class="topContent">
+  <div id="features">
+ <h4>Features</h4> 
+ <p>
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+ </p> 
+</div>
 
-
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<div id="about">
+  <h4>About</h4>
+  <p>
+    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </p>
+</div>
+</section>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
-  Services
+  <section class="bottomContent">
+    <div>
+  <h4>Services</h4>
+  <p>
+    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</p>
+</div>
 
+<div>
+  <h4>Product</h4>
+  <p>
+    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </p>
+</div>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<div>
+  <h4>Vision</h4>
+ <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p> 
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
-  Copyright Great Idea! 2018
+<section class="contact"> 
+  <h4>Contact</h4>
+<div>
+  <p>123 Way
+  456 Street</p> 
   
+  <p>Somewhere, USA</p>
+  </div>
+  <div> 
+  <p>1 (888) 888-8888</p>
+
+  <p>sales@greatidea.io</p>
+</div>
+ 
+</section> 
+
+<footer>
+  <div class="footer">
+  <p>Copyright Great Idea! 2018</p>
+</footer>
+</div>
   </body>
 </html>
